# self-driving-e2e-multitask

./: .gitignore  README.md  README_TRAIN.md  check_gpu.py  check_model.py  debug_dataloader_vis.py  inference_images.py  inference_video.py  neuro_pilot_methodology.md  pyproject.toml  requirements.txt  train.py  train_real.py
.github/workflows/: ci.yml
config/: schema.py
data/: __init__.py  bfmc_dataset_v2.py
data/processed/: 013565d5-frame_3061_jpg.rf.606623a6119d1a71ac91e404e5e9450c.json  01769b66-frame_949_jpg.rf.2da6194041c2f63498458c18b9aaa2ee.json  01783d05-frame_907_jpg.rf.4cd28b2b8a82d3de312f04a2bd2a5b25.json  034604cf-frame_1925_jpg.rf.ba6a6943454021168b5c1675d9bef66d.json  04933875-frame_3511_jpg.rf.72feaf410f440ea579ee9266fb12c81b.json  04933875-frame_3511_jpg.rf.bb6d5629525fe470a85c97b2b15c8242.json  0501ac4e-frame_1021_jpg.rf.60f1ed6fcb8c951e507f64d2ffa4da81.json  06719aad-frame_2579_jpg.rf.90e6d145ed270624eeabc3e44bc784fc.json  0694a4ab-frame_4415_jpg.rf.67c9eff3eb6243b853620ebcdc058d61.json  0811abcb-frame_7211_jpg.rf.5ed870b1eabd48ebd297e4ef11579630.json  08306448-frame_8001_jpg.rf.a70e2153f2d2004e9c8fb8a8001a921e.json  107777ad-frame_7_jpg.rf.465675fe36c321da8c7e2f17ff6f545b.json  1103eba8-frame_3373_jpg.rf.7ce02e4810a2b0cd619775500cfea517.json  12745a27-frame_947_jpg.rf.81b2347f3e825d3387bc9b4ccc7aa4e4.json  1406055a-frame_3997_jpg.rf.271856341fd42d6bfc028c912a22ac84.json  1406055a-frame_3997_jpg.rf.d16e425e46deca3b7762511dc99a3c1a.json  1472f5f0-frame_4149_jpg.rf.54e782e184db1af0be8001eb6ace641d.json  1472f5f0-frame_4149_jpg.rf.ae7ebd6a6ea5f780e6041d787a265f5b.json  15698f2e-frame_115_jpg.rf.36a0a4d8f4b1caa6a36b5c0b3b3c3614.json  15698f2e-frame_115_jpg.rf.e7b577eff64bb3b593b860b42b4a278b.json  1569_Color_jpg.rf.7ea6b12944177daa5fb3105b51157c18.json  1569_Color_jpg.rf.7ea6b12944177daa5fb3105b51157c18_dup1.json  1569_Color_jpg.rf.7ea6b12944177daa5fb3105b51157c18_dup3.json  1569_Color_jpg.rf.cd84282f6dbd5c34ddbe792c0ccf47c5.json  1569_Color_jpg.rf.cd84282f6dbd5c34ddbe792c0ccf47c5_dup1.json  1569_Color_jpg.rf.cd84282f6dbd5c34ddbe792c0ccf47c5_dup3.json  1589_Color_jpg.rf.d76a8066de9086b81dc8e4cb82cb775c.json  1589_Color_jpg.rf.d76a8066de9086b81dc8e4cb82cb775c_dup1.json  1591_Color_jpg.rf.5147a8b21f2844ebf91805b24a962add.json  1591_Color_jpg.rf.5147a8b21f2844ebf91805b24a962add_dup2.json  1591_Color_jpg.rf.8ba4b7501fbc742697d633dbd7bf99f6.json  1592_Color_jpg.rf.05055b2ce744e8d564ebcb53aa7d9a47.json  1592_Color_jpg.rf.05055b2ce744e8d564ebcb53aa7d9a47_dup1.json  1592_Color_jpg.rf.dfa5bc314574d94010ea5ca321c85f54_dup1.json  1592_Color_jpg.rf.dfa5bc314574d94010ea5ca321c85f54_dup3.json  1594_Color_jpg.rf.1d08660524a65f25522fbd2d4a6b7693_dup1.json  1594_Color_jpg.rf.1d08660524a65f25522fbd2d4a6b7693_dup3.json  1594_Color_jpg.rf.46fb84012674693ca1fa3cbef8544991_dup1.json  1597_Color_jpg.rf.0ad52a699ee78a393e1be799edc442fd.json  1597_Color_jpg.rf.0ad52a699ee78a393e1be799edc442fd_dup1.json  (+714 more)
deploy/: deployment_concept.py  export_onnx.py
engine/: callbacks.py  logger.py  trainer.py  utils.py  validator.py
examples/: jetson_inference_onnx.py  jetson_inference_trt.py
models/: __init__.py  base.py  common.py  detectors.py  e2e_net.py  net.py  yolo.py
neuro_pilot/: __init__.py  entrypoint.py  main.py
neuro_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
neuro_pilot/cfg/: __init__.py  default.yaml  schema.py
neuro_pilot/core/: registry.py
neuro_pilot/data/: __init__.py  augment.py  build.py  dataset.db  neuro_pilot_dataset.py  neuro_pilot_dataset_v2.py  utils.py
neuro_pilot/deploy/: deployment_concept.py  export_onnx.py
neuro_pilot/engine/: __init__.py  base_predictor.py  base_trainer.py  base_validator.py  callbacks.py  composite.py  exporter.py  loaders.py  logger.py  model.py  predictor.py  results.py  task.py  trainer.py  validator.py  validator_composite.py
neuro_pilot/models/: base.py
neuro_pilot/nn/: tasks.py
neuro_pilot/tasks/: __init__.py  atomic.py  detection.py
neuro_pilot/tools/: production_benchmark.py
neuro_pilot/utils/: nms.py  (+14 more)
scripts/: export.py  run_inference.py  run_video_inference.py  train.py
tests/: benchmark_dataloading.py  benchmark_inference.py  dummy_model.yaml  sample_model.yaml  test_architecture.py  test_augment_config.py  test_augment_force.py  test_augment_force_db.py  test_augment_viz.py  test_backbone.py  test_backend.py  test_bezier_model.py  test_callbacks.py  test_config.py  test_data.py  test_dataset_loading.py  test_detection_model.py  test_e2e_train.py  test_engine.py  test_extensibility.py  test_full_pipeline.py  test_gate_structure.py  test_intersection_loss.py  test_losses.py  test_metrics.py  test_model.py  test_models.py  test_nn_modules.py  test_ops.py  test_plotting.py  test_sparsity_learning.py  test_tal.py  test_unified_api.py  test_utils.py  test_variants.py  test_yolo_loading.py  verify_architecture.py  verify_training_artifacts.py  verify_v2.py
tools/: debug_full_pipeline_visualization.py  debug_heatmap_pipeline.py  debug_raw_matches.py  export.py  extract_frames.py  intersection_concept.py  merge_folders.py  rename_frames_unique.py  run_inference.py  simulation_script.py  verify_heatmap_data.py  verify_pipeline.py  visualize_drivable_area.py  visualize_gt_mask.py  visualize_lane_mask.py  visualize_sample_dataloader.py  viz_debug.py
utils/: losses.py
(+5977 files in other folders)
