[project]
name = "neuro-pilot"
version = "1.0.0"
description = "NeuroPilot: Unified E2E Autonomous Driving Framework (Multitask, World-Model Ready)"
authors = [
    { name = "Vo Thanh Nguyen", email = "thcs2nguyen@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["autonomous-driving", "multitask-learning", "deep-learning", "trajectory-prediction", "object-detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "tqdm",
    "numpy",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "opencv-python",
    "pyyaml",
    "onnx",
    "onnxscript>=0.5.7",
    "pydantic>=2.0",
    "rich",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "torchmetrics>=1.8.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "pycocotools>=2.0.11",
    "loguru>=0.7.2",
    "omegaconf>=2.3.0",
    "onnxruntime<1.24.0",
    "psutil",
    "minio",
    "onnxsim>=0.4.36",
    "pynvml>=13.0.1",
    "tensorrt>=10.15.1.29",
]

[project.urls]
Homepage = "https://github.com/vtnguyen04/self-driving-e2e-multitask"
Repository = "https://github.com/vtnguyen04/self-driving-e2e-multitask"

[project.scripts]
neuropilot = "neuro_pilot.entrypoint:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuro_pilot"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*no transform to process it.*:UserWarning",
    "ignore:.*Support for class-based  is deprecated.*:pydantic.PydanticDeprecatedSince20",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "F823", # Local variable Path referenced before assignment,
    "F811", # Redefinition of unused logger,
    "E722", # Bare except,
    "F401", # Unused import,
    "E501", # Line too long
    "E701", # Multiple statements on one line (colon)
    "E702", # Multiple statements on one line (semicolon)
    "E402", # Module level import not at top of file
    "F403", # star imports
    "F405", # star import usage
]
